force-app/main/default/objects/Distancias__c/Distancias__c.object-meta.xml
<CustomObject>
    <label>Distancias</label>
    <nameField>
        <label>Viaje</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distancias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>