force-app/main/default/objects/Distancias__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <label>Destino</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Oringe__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Provincia</valueSetName>
    </valueSet>
</CustomField>