force-app/main/default/objects/Distancias__c/fields/Kilometros__c.field-meta.xml
<CustomField>
    <fullName>Kilometros__c</fullName>
    <label>Kilometros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>