force-app/main/default/objects/Distancias__c/fields/Oringe__c.field-meta.xml
<CustomField>
    <fullName>Oringe__c</fullName>
    <label>Oringe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provincia</valueSetName>
    </valueSet>
</CustomField>